# advent-of-code-2025

./: .gitignore  README.md  pyproject.toml
day01/: day01.cpp  day01.cs  day01.py
day02/: day02.cpp  day02.py
day03/: day03.cpp  day03.py  test_input.txt
day04/: day04.cpp  day04.py
day05/: day05.py  test_input.txt
day06/: day06.py
day07/: day07.py  test_input.txt
day08/: day08.py
day09/: day09.py
day10/: day10.py
day11/: day11.py
day12/: day12.py
